--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>A Basic HTML5 Template</title>
+    <title>Lens tips data</title>
     <meta name="description" content="Lens data">
     <meta name="author" content="edoli">
 
